# stagehand_embedded_server

./: .CMakeLists.txt.swp  .cproject  .project  CMakeLists.txt  Readme.txt  build_def.prop  project_def.prop
Debug/: .ninja_deps  .ninja_log  build.info  build.ninja  compile_commands.json  target.ninja
Debug/objs/: platform_incs_file.inc  platform_libs.file  target_objs.file
Debug/src/: automation.o.d  main.o.d  subdir.ninja
Debug/src/libwebsockets/: subdir.ninja
Debug/src/libwebsockets/server/: subdir.ninja
Debug/src/server/: subdir.ninja
bld/: CMakeCache.txt  Makefile  cmake_install.cmake
inc/: automation.h  lws_config.h  lws_config_private.h  stagehand.h
src/: automation.cpp  m.cpp  main.cpp  stagehand.c
src/libwebsockets/: .handshake.c.swp  context.c  daemonize.c  libwebsockets.c  libwebsockets.h  lws-plat-unix.c  memfops.c  private-libwebsockets.h  service.c
src/server/: stagehand.c  stagehandserver-http.c  stagehandserver-sh.c  stagehandserver.c  stagehandserver.h
web/: file.list  index.html  index.html.orig
web/css/: burgundy.css  dark.css  forest.css  ocean.css  stagehand.css  tree.css
web/js/: .stagehandintro.js.swp  stagehandintro.js  stagehandmain.js  stagehandparser.js  stagehandrenderer.js  stagehandutils.js
